Added descendent selector for pb-shelf-dropdown label to position it offscreen for accessibility (but hide it for full-css setups).

--- a/src/podiobooks/media/themes/pb2-jq/css/shelf.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/shelf.css
@@ -159,6 +159,15 @@
 	margin: 1px 0 0 10px;
 }
 
+.pb-shelf-dropdown label {
+	position:absolute;
+	left:-10000px;
+	top:auto;
+	width:1px;
+	height:1px;
+	overflow:hidden;
+}
+
 .pb-category-choice {
 	font-size: 14px;
 	background: #fff;
