Contributor and category shelf templates moved in under shelf area.
Former-commit-id: 8ffe4b13bdcc983c001038980b92f56d42039684
Former-commit-id: 2a040c30576b94b4b5200a9a617474cd44f39f9f
Former-commit-id: 3e7ad19125179389c1aa5cb1e668daae7f7679ee
Former-commit-id: a392e0884e60b74342b6b2a41e3a008bd635670b
Former-commit-id: 543523eb2dddfe5eaec8b63ef3ce2757c58ca2d3
Former-commit-id: eb2d6e7d6205244eca177687c9ad91d6bc8371eb

--- a/src/podiobooks/templates/themes/pb2-jq/main/shelf/tags/show_shelf_pages.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/shelf/tags/show_shelf_pages.html
@@ -1,4 +1,4 @@
-{% load title_templatetags %}
+{% load shelf_templatetags %}
 {% if title_list %}
 <div id="{{ shelf_id }}">
 	<ul>
@@ -7,7 +7,7 @@
 		    <li id="{{ shelf_id }}_page_0" >
 		{% endif %}
 		
-        {% show_detail_snippet title %}
+        {% show_shelf_item shelf_id title %}
 		
         {% if forloop.counter|divisibleby:shelf_title_width and not forloop.last %}
     		</li>
@@ -20,12 +20,3 @@
 	</ul>
 </div>
 {% endif %}
-
-<!--
-$(document).ready(function() {
-  $('#articles div').appear(function() {
-    var a = $(this).find('a');
-    $(this).load(a.attr('href'));
-  });
-});
--->
