--- a/src/podiobooks/templates/themes/pb2-jq/main/shelf/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/shelf/tags/show_shelf.html
@@ -7,9 +7,16 @@
 	<div class="pb-shelf-middle">
         <div class="pb-shelf-titlebar">
             <h2 style="float: left;">{{ shelf_title }}</h2>
-			<div id="{{ shelf_id }}Controller" class="pb-shelf-controller"</div>
+			{% if dropdown_form %}
+			<form class="pb-shelf-dropdown" action="{{ dropdown_form.submit_url }}" name="{{ shelf_id }}" id="{{ shelf_id }}Dropdown">
+				{{ dropdown_form }}
+            </form>
+			{% endif %}
+			<div id="{{ shelf_id }}Controller" class="pb-shelf-controller"></div>
         </div>
-        {% show_shelf_items shelf_id shelf_title title_list shelf_title_width %}
+		<div class="pb-shelf-page-container" id="{{ shelf_id }}PageContainer">
+        	{% show_shelf_pages shelf_id shelf_title title_list shelf_title_width %}
+		</div>
     </div>
 	<div class="pb-shelf-end pb-shelf-end-right disabled">  	
 	</div>
