Added stubbed call for drop-downs in jq version.
Former-commit-id: f31777adc771c51ea5c4bfa78d0ef1dd7c307116
Former-commit-id: 1764adfda1fd11ba54376c1cc918d71791cc245a
Former-commit-id: ba311a2d1501b61157ec0f33f34f6373afac9739
Former-commit-id: 254f2d7115fcff9be5178ed531ce99018014d7e4
Former-commit-id: e821ed47a69ca7a4114ae029b19c14805e76d977
Former-commit-id: f5ffbc60bee3516bc29688e0dd585a1f56815e6a

--- a/src/podiobooks/templates/themes/pb2-jq/footer.html
+++ b/src/podiobooks/templates/themes/pb2-jq/footer.html
@@ -17,4 +17,5 @@
         <br>
         See legal notes for audio file rights.
     </div>
+	<script type=text/javascript src='{{MEDIA_URL}}js/pbwidgets/browse-jq.js'></script>
 </div>
