Formatting cleanup in file, renamed pb-hidden-label to pb-hidden.
Former-commit-id: 656c75f59592e7c2c846060e367130d08ef2f309
Former-commit-id: 93337627091bbc9358007f6e8bd6bb09162f7453
Former-commit-id: 018ccb5755eeeda001f10141dcf2156f82c0fa0e
Former-commit-id: 3470bc865a8263d551c6677eca07263ee1135891
Former-commit-id: cdd60096307c333eecdc3911282e95bf34353fff
Former-commit-id: 10f760d262e1a0f1c24d290111c311b6f3e3d311

--- a/src/podiobooks/media/themes/pb2-jq/css/base.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/base.css
@@ -65,10 +65,11 @@ ul {
 	float:left;
 	text-align:center;
 }
-#pb-header-background a img
-{
+
+#pb-header-background a img {
 	border:none;
 }
+
 #pb-header-click-region {
 	cursor: pointer;
 	width: 600px;
@@ -77,14 +78,14 @@ ul {
 	
 }
 
-.pb-header-menubar-top
-{
+.pb-header-menubar-top {
 	background:url(../images/pb-header-menubar-top.png) top left no-repeat;
 	margin:0px 0px 0px 0px;
 	width:970px;
 	height:10px;
 	float:left;
 }
+
 #pb-header-menubar {
 	font-size: 14px;
 	margin: 0px 0px 0 0px;
@@ -94,28 +95,18 @@ ul {
 	padding:0px 20px 0px 20px;
 	background:url(../images/pb-header-menubar.png) top left repeat-y;
 }
-.pb-header-menubar-bottom
-{
+
+.pb-header-menubar-bottom {
 	background:url(../images/pb-header-menubar-bottom.png) top left no-repeat;
 	margin:0px 0px 20px 0px;
 	width:970px;
 	height:17px;
 	float:left;
 }
+
 #pb-header-menubar-items {
 	margin: 2px 0 0 0;
 	float: left;
-}
-
-#pb-header-menubar .dijitButton,
-#pb-header-menubar .dijitButtonNode,
-#pb-header-menubar .dijitButtonContents,
-#pb-header-menubar .dijitInline,
-#pb-header-menubar button {
-	margin: 0 0 0 0;
-	border: none;
-	vertical-align: top;
-	background: transparent;
 }
 
 #pb-footer-text {
@@ -137,9 +128,12 @@ ul {
 	text-align: center;
 }
 
-.pb-hidden-label {
-	height: 0px;
-	width: 0px;
+.pb-hidden {
+	position: absolute;
+	left: -10000px;
+	top: auto;
+	width: 1px;
+	height: 1px;
 	overflow: hidden;
 }
 
@@ -180,28 +174,28 @@ ul {
 	float:right;
 }
 
-.browseby-links p{
+.browseby-links p {
 	float:left;
 }
-.browseby-links
-{
+
+.browseby-links {
 	float:right;
 	margin:2px 0px 0px 0px;
 
 }
-.browseby-links ul
-{
+
+.browseby-links ul {
 	float:right;
 	margin:0px 10px 0px 20px;
 }
-.browseby-links ul li
-{
+
+.browseby-links ul li {
 	margin:0px 10px 0px 0px;
 	display:inline;
 	float:left;
 }
-.browseby-links ul li a
-{
+
+.browseby-links ul li a {
 	padding:0px 10px 0px 0px;
 	background:url(../images/arrow-right.png) center right no-repeat;
 	float:left;
@@ -211,21 +205,20 @@ ul {
 .browseby-links ul li a:link,
 .browseby-links ul li a:active,
 .browseby-links ul li a:hover,
-.browseby-links ul li a:visited
-{
+.browseby-links ul li a:visited {
 	text-decoration:none;
 }
 
-.pb-browseby-lists-pagers
-{
+.pb-browseby-lists-pagers {
 	font-size:14px;
 	color:#fff;
 	float:right;
 }
-.pb-browseby-lists-pager:hover{
+
+.pb-browseby-lists-pager:hover {
 	color#000;
 }
-.pb-browseby-lists-pager
-{
+
+.pb-browseby-lists-pager {
 	cursor:pointer;
 }
