--- a/src/podiobooks/media/themes/pb2/css/base.css
+++ b/src/podiobooks/media/themes/pb2/css/base.css
@@ -137,9 +137,12 @@ ul {
 	text-align: center;
 }
 
-.pb-hidden-label {
-	height: 0px;
-	width: 0px;
+.pb-hidden {
+	position: absolute;
+	left: -10000px;
+	top: auto;
+	width: 1px;
+	height: 1px;
 	overflow: hidden;
 }
 
