Added clear.css to the jq version (plays poorly with the dojo version).

--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -11,6 +11,7 @@
 <meta name="Keywords" content="audio books, audiobooks, books, novels, podcast, podcasting, podiobooks" /> 
 <meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
 {% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/clear.css" >
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/base.css" >
 <link rel="stylesheet" type=text/css href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery-ui.css" >
 <script type="text/javascript" src="http://use.typekit.com/coc0qsu.js"></script>
