Working jq-based shelf.  Updated to 1.2.1.
Former-commit-id: 3bdd948ab83f9dc3d0e9ba686db58830f3c1dd9d
Former-commit-id: c011e847b27a6d53f93c6060d6216c912d4a077e
Former-commit-id: 23f574d4e2580914283b430d84a026c89415d3b2
Former-commit-id: f7c584925b6268b4b5b5b865d861b44fba89f1a5
Former-commit-id: 5d1b4af3bc083a37f5d89a7e889d41515aa304ba
Former-commit-id: dc058156ad3afa95e0aacfc9a26d42f769603749

--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -10,14 +10,14 @@
 {% block content %} 
 
 {% url category_shelf 'placeholder_slug' as category_dropdown_url %} 
-{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form 'pb-shelf-featured' 4 %} 
+{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form 'pb-shelf-featured' 4 %}
 
 <!-- Begin JavaScript Includes for Shelf Interactivity -->
 <script src="{{ MEDIA_URL }}js/jquery/js/jcarousellite_1.0.1.pack.js">
 </script>
 <script src="{{ MEDIA_URL }}js/pbwidgets/book_shelf/book_shelf_jq.js">
 </script>
-<script src="{{ MEDIA_URL }}js/jquery/js/jquery.appear-1.1.1-min.js">
+<script src="{{ MEDIA_URL }}js/jquery/js/jquery.appear-1.1.1.min.js">
 </script>
 <!-- End JavaScript Includes for Shelf Interactivity -->
 
