Added disqus comments as a trial.
Former-commit-id: 990031a427c07442b02105cca3c44e23184cfd24
Former-commit-id: 3ed887fb46374c707416ab39e5c754a6803e329b
Former-commit-id: 29026c1e1e64f55d37cdfa3db2191200d39133b8
Former-commit-id: 90ab0f0872711961c515e0dd11de95fcec58e24f
Former-commit-id: f4a93e6510254b95ffc669eab1ed629ba174b486
Former-commit-id: c450f889013610324c7a2458719a339920ffdcb7

--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -6,11 +6,29 @@
 {% block head %}
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css">
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/shelf.css">
+<style type=text/css>
+	.specific-box {
+		border:2px solid #000;
+		border-radius:5px 5px 5px 5px;
+		padding: 5px;
+	}  
+</style>
 {% endblock %}
 {% block content %} 
 
 {% url category_shelf 'placeholder_slug' as category_dropdown_url %} 
 {% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form 'pb-shelf-featured' 4 %}
+
+<div class="specific-box">
+	<p>asdfjljsdf
+	asdfkljasdf
+	asdlfkjasdlfjk
+	asdflkjsdflkj</p>
+	<p>asdfjljsdf
+	asdfkljasdf
+	asdlfkjasdlfjk
+	asdflkjsdflkj</p>
+</div>
 
 <!-- Begin JavaScript Includes for Shelf Interactivity -->
 <script src="{{ MEDIA_URL }}js/jquery/js/jcarousellite_1.0.1.pack.js">
