--- a/src/podiobooks/templates/themes/pb2-jq/header.html
+++ b/src/podiobooks/templates/themes/pb2-jq/header.html
@@ -11,6 +11,11 @@
                 | <a href="http://podiobooks.com/about.php">FAQ</a>
                 | <a href="http://www.podiobooks.com/blog">Blog</a>
                 | <a href="http://community.podiobooks.com/">Community</a>
+				| {% if user.is_authenticated %}
+					<a href="{% url django_authopenid.views.signout %}">Logout {{ user.username }}</a>
+				  {% else %} 	
+					<a href="{% url django_authopenid.views.signin %}">Login/Register</a>
+ 	              {% endif %}
             </div>
             {% show_searchbox %}
 			{% show_browsebox %}
