--- a/src/podiobooks/templates/themes/pb2-jq/base.html
+++ b/src/podiobooks/templates/themes/pb2-jq/base.html
@@ -46,5 +46,6 @@
 <!-- Begin Footer -->
 {% block footer %}{% include "footer.html" %}{% endblock %}
 <!-- End Footer -->
+<input type="hidden" name="OBKey" value="41BkrdZJ1KEMbSONA09kZQ=="/> <script LANGUAGE="JavaScript">var OBCTm='1278089458101'; </script><script LANGUAGE="JavaScript" src="http://widgets.outbrain.com/claim.js"></script>
 </body>
 </html>
