Removed Brant's browseby stuff until he gets it working with jQuery.
Former-commit-id: fdb6502045158839a90ad3613a98bf067c5886cf
Former-commit-id: 98f30f7ecd410809240186ea19b5514e9ab0e8b9
Former-commit-id: fcc49ab2443e63b91c54ba1faf2d15ae16e53353
Former-commit-id: 42fa8396b8ade6fa1dc14b5f5c7217d16b570179
Former-commit-id: 30ff30c70e145e8dbc4497132bed715adb214233
Former-commit-id: 8f3b45cc9fcffef89694fb18f1e0980356a743be

--- a/src/podiobooks/media/themes/pb2-jq/css/base.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/base.css
@@ -197,7 +197,7 @@ ul {
 
 .browseby-links ul li a {
 	padding:0px 10px 0px 0px;
-	background:url(../images/arrow-right.png) center right no-repeat;
+	/* background:url(../images/arrow-right.png) center right no-repeat; */
 	float:left;
 }
 
