Spelling/Text Fixes in registration emails/screens.
Former-commit-id: 44fdfaffa1e9e397c2421b5c191a0445ecfe48e5
Former-commit-id: 50f6eea0d9249f6b87e82b38aae16d126c2b2a7c
Former-commit-id: 0c792704bb01be789050f6ebea75b18bde0ad548
Former-commit-id: 7aea0bfda15fd9a7824589437ab76759702e1d64
Former-commit-id: f873cbb4d052a263256a81331c30bff2bb8956db
Former-commit-id: cd18221cd8356871fc7e3b6be1160514dfb1c8b4

--- a/src/podiobooks/templates/themes/pb2-jq/registration/registration_complete.html
+++ b/src/podiobooks/templates/themes/pb2-jq/registration/registration_complete.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>Your {{ site_name }} Account has been Created!</h1>
-<p>An email has been sent to you. You need to click link in it to activate your account.</p>
+<p>An email has been sent to you. You need to click the link in it to activate your account.</p>
 <br>
 <br>
 <br>
