--- a/src/podiobooks/templates/themes/pb2-jq/registration/activate.html
+++ b/src/podiobooks/templates/themes/pb2-jq/registration/activate.html
@@ -4,5 +4,6 @@
 
 {% block content %}
 <h1>Your {{ site_name }} Account has been Activated!</h1>
-<p>Your account is now activated. Go <a href="/">here</a> to continue.</p>
+<p>Your account is now activated!</p>
+<p>Now you can <a href="{% url user_signin %}">Login with your new username and password</a></p>
 {% endblock %}
