More typo/text fixes in registration pages.
Former-commit-id: 0c939fc74c1694fcd06d434c80d34f9523d16dfe
Former-commit-id: 88b45fd180a1574bd6b7d6cb1e1f45a333c27889
Former-commit-id: 288ef26ffb70ac92c1a8ac91e3dff84995216e36
Former-commit-id: 1e01a16ac989f369239b9bd7df3d642c75d92d34
Former-commit-id: 2547c669b84dcc76adb69ae36139f00ad255d884
Former-commit-id: 99b360711c396a7efedd01441e74a5c3e324b139

--- a/src/podiobooks/templates/themes/pb2-jq/registration/activate.html
+++ b/src/podiobooks/templates/themes/pb2-jq/registration/activate.html
@@ -5,5 +5,6 @@
 {% block content %}
 <h1>Your {{ site_name }} Account has been Activated!</h1>
 <p>Your account is now activated!</p>
-<p>Now you can <a href="{% url user_signin %}">Login with your new username and password</a></p>
+<br>
+<p>Now you can <a href="{% url user_signin %}">Login</a> with your new username and password</p>
 {% endblock %}
