--- a/src/podiobooks/templates/themes/pb2-jq/authopenid/complete.html
+++ b/src/podiobooks/templates/themes/pb2-jq/authopenid/complete.html
@@ -1,53 +1,22 @@
 {% extends "base.html" %}
-{% load i18n %}
 
 
-
-{% block head %}{% endblock %}
+{% block title %}{{ site_name }} - Associate Your Account With Podiobooks{% endblock %}
 
 
 {% block content %}
-
 	<div id="completetxt">
-	<h1>{% trans "Your OpenID is verified! " %}</h1>
-	{% blocktrans %}
+	<h1>{% trans "Your External Account is Verified!" %}</h1>
 	<p>Your OpenID can now be associated with a new or existing membership. You can change the association later in your preferences.</p>
-	{% endblocktrans %}
 	<br /><br />
-	<h2>{% trans "Associate your OpenID" %}</h2>
-	{% blocktrans %}
-	<p>If you're joining <strong>Sitename</strong>, associate your OpenID with a new account. If you're already a member, associate with your existing account.</p>
-	{% endblocktrans %}
 	</div>
-
-		
 	
-	{% if form1.errors %}
-	<p class="errors">{% trans "Please correct errors below:" %}<br />
-		{% if form1.username.errors %} 
-			<span class="error">{{ form1.username.errors|join:", " }}</span>
-		{% endif %}
-		{% if form1.email.errors %} 
-			<span class="error">{{ form1.email.errors|join:", " }}</span>
-		{% endif %}
-	</p>
-	{% endif %}
-	{% if form2.errors %}
-	<p class="errors">{% trans "Please correct errors below:" %}<br />
-		{% if form2.username.errors %} 
-			<span class="error">{{ form2.username.errors|join:", " }}</span>
-		{% endif %}
-		{% if form2.password.errors %} 
-			<span class="error">{{ form2.password.errors|join:", " }}</span>
-		{% endif %}
-	</p>
-	{% endif %}
-
-	<div class="login">
+	<h3>Choose A Nickname for This Account at {{ site_name}}:</h3>
+	<div class="login" style="line-height:2">
         <form name="fregister" action="{% url user_register %}" method="POST">
             <input type="hidden" name="next" value="{{ next }}" />
 			<fieldset>
-				<legend>{% trans "A new account" %}</legend>
+				<legend>Choose a New Nickname:</legend>
 				<div class="form-row"><label for="id_username">{% trans "Username" %}</label><br />{{ form1.username }}</div>
 				<div class="form-row"><label for="id_email">{% trans "Email" %}</label><br />{{ form1.email }}</div>
 				<div class="submit-row"><input type="submit" name="bnewaccount" value="Create account"></div>
@@ -56,14 +25,15 @@
 		</form>
 	</div>
 
+	<h3>OR</h3>
 	
+	<h3>If you have an existing {{ site_name }} account, associate this External Account with it by logging in:</h3>
 
-	<div class="login">
-		<h3></h3>
+	<div class="login" style="line-height:2">
         <form name="fverify" action="{% url user_register %}" method="POST">
             <input type="hidden" name="next" value="{{ next }}" />
 			<fieldset>
-				<legend>{% trans "An exisiting account" %}</legend>
+				<legend>Associate Your External Account with this {{ site_name }} account:</legend>
 				<div class="form-row"><label for="id_username">{% trans "Username" %}</label><br />{{ form2.username }}</div>
 				<div class="form-row"><label for="id_passwordl">{% trans "Password" %}</label><br />{{ form2.password }}</div>
 				<div class="submit-row"><input type="submit" name="bverify" value="Verify"></div>
