Removed remainder of i18n stuff.
Former-commit-id: f443e3e518dda14e101876451bf705d16fe400b3
Former-commit-id: c421f0a0d574b14cd0bc1c2dfc57dac4d59c434f
Former-commit-id: 3dca7765e34f8b884310fd1214d3da7b81412e4c
Former-commit-id: 798fc6f1a1047148ffd06e8597bfd1764fec2be6
Former-commit-id: 67fdd99d5fafbe307ea08049ef41d9be640aade8
Former-commit-id: b454b99d5bca9dbefec964e93dee033623cd9e7d

--- a/src/podiobooks/templates/themes/pb2-jq/authopenid/complete.html
+++ b/src/podiobooks/templates/themes/pb2-jq/authopenid/complete.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 	<div id="completetxt">
-	<h1>{% trans "Your External Account is Verified!" %}</h1>
+	<h1>Your External Account is Verified!</h1>
 	<p>Your OpenID can now be associated with a new or existing membership. You can change the association later in your preferences.</p>
 	<br /><br />
 	</div>
@@ -17,8 +17,8 @@
             <input type="hidden" name="next" value="{{ next }}" />
 			<fieldset>
 				<legend>Choose a New Nickname:</legend>
-				<div class="form-row"><label for="id_username">{% trans "Username" %}</label><br />{{ form1.username }}</div>
-				<div class="form-row"><label for="id_email">{% trans "Email" %}</label><br />{{ form1.email }}</div>
+				<div class="form-row"><label for="id_username">Username</label><br />{{ form1.username }}</div>
+				<div class="form-row"><label for="id_email">Email</label><br />{{ form1.email }}</div>
 				<div class="submit-row"><input type="submit" name="bnewaccount" value="Create account"></div>
 				<hr class="clear" />
             	</fieldset>
@@ -34,8 +34,8 @@
             <input type="hidden" name="next" value="{{ next }}" />
 			<fieldset>
 				<legend>Associate Your External Account with this {{ site_name }} account:</legend>
-				<div class="form-row"><label for="id_username">{% trans "Username" %}</label><br />{{ form2.username }}</div>
-				<div class="form-row"><label for="id_passwordl">{% trans "Password" %}</label><br />{{ form2.password }}</div>
+				<div class="form-row"><label for="id_username">Username</label><br />{{ form2.username }}</div>
+				<div class="form-row"><label for="id_passwordl">Password</label><br />{{ form2.password }}</div>
 				<div class="submit-row"><input type="submit" name="bverify" value="Verify"></div>
 			</fieldset>
 		</form>
