More typo/text fixes in registration pages.
Former-commit-id: a7f7f7efa8f730fffe8519e6465a4325a9761f59
Former-commit-id: ff82ba6625c3c007066e42c999d7f4e5d2224521
Former-commit-id: 099fb8205c830ba0de051920d901526488c7ab05
Former-commit-id: c64bf194c5b9360c774aa4e599589ec36fba586a
Former-commit-id: a84a699eef3d7da6c4ad9d61727c782507514a9e
Former-commit-id: bce5f96059e1cd068d725014804d408f6a266c4d

--- a/src/podiobooks/templates/themes/pb2-jq/authopenid/complete.html
+++ b/src/podiobooks/templates/themes/pb2-jq/authopenid/complete.html
@@ -5,7 +5,8 @@
 {% block content %}
 	<div id="completetxt">
 	<h1>Your External Account is Verified!</h1>
-	<p>You now need to associate your External Account new or existing {{ site_name }} nickname. You can change the association later in your preferences.</p>
+	<p>You now need to associate your External Account new or existing {{ site_name }} nickname.</p>
+	<p>You can change the association later in your preferences.</p>
 	<br />
 	</div>
 	
@@ -13,7 +14,7 @@
         <form name="fregister" action="{% url user_register %}" method="POST">
             <input type="hidden" name="next" value="{{ next }}" />
 			<fieldset>
-				<legend>Choose A {{ site_name }} Nickname for This Account:</legend>
+				<legend style="font-weight:bold">Choose A {{ site_name }} Nickname for This Account:</legend>
 				<div class="form-row"><label for="id_username">Username</label><br />{{ form1.username }}</div>
 				<div class="form-row"><label for="id_email">Email</label><br />{{ form1.email }}</div>
 				<div class="submit-row"><input type="submit" name="bnewaccount" value="Create account"></div>
@@ -27,7 +28,7 @@
         <form name="fverify" action="{% url user_register %}" method="POST">
             <input type="hidden" name="next" value="{{ next }}" />
 			<fieldset>
-				<legend>If you have an existing {{ site_name }} account, associate this External Account with it by logging in:</legend>
+				<legend style="font-weight:bold">If you have an existing {{ site_name }} account, associate this External Account with it by logging in:</legend>
 				<div class="form-row"><label for="id_username">Username</label><br />{{ form2.username }}</div>
 				<div class="form-row"><label for="id_passwordl">Password</label><br />{{ form2.password }}</div>
 				<div class="submit-row"><input type="submit" name="bverify" value="Verify"></div>
