Added SSL redirect for login and corresponding settings entries.

--- a/src/podiobooks/templates/themes/pb2-jq/authopenid/signin.html
+++ b/src/podiobooks/templates/themes/pb2-jq/authopenid/signin.html
@@ -89,9 +89,9 @@
         <br>
         <br>
         <div style="text-align: center;">
-            <a href="{% url registration_register %}">Create a New Podiobooks-Only Account</a>
+            <p><a href="{% url registration_register %}">Create a New Podiobooks-Only Account</a></p>
 			<br>
-			Forgot Password?
+			<p><a href="{% url auth_password_reset %}">Forgot Password?</a></p>
         </div>
     </div>
 </div>
