Added ajax-loading image for book covers on detail page.  Need to copy to shelf at some point...
Former-commit-id: 71dddc40523d8e93489e0ecdd8331ee61e78809b
Former-commit-id: c2e6fef1c0152cd0a6199cb01b80df421a7e3534
Former-commit-id: cd7c7d9f2853eaf38eff96194a62a2dba7ee74eb
Former-commit-id: 3c602b4f693eed6c78ce8f526257c8cf0859fd78
Former-commit-id: 26dbd0d4758678456950c684140965943ff80b18
Former-commit-id: b421d158a7a44c5ab9db3efb05e58ef48d3d9bc2

--- a/src/podiobooks/media/themes/pb2-jq/css/base.css
+++ b/src/podiobooks/media/themes/pb2-jq/css/base.css
@@ -219,3 +219,7 @@ ul {
     color: red;
     font-weight: bold;
 }
+
+.loading {
+    background: url(../images/loading.gif) no-repeat center center;
+}
